# Pigment

./: .gitignore  .htaccess  .vercelignore  COMPATIBILITY.md  Cargo.toml  LICENSE  Makefile  PRIVACY.md  README.md  ROADMAP.md  TERMS.md  guide.html  index.html
.claude/skills/run-pigment/: SKILL.md  driver.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
crates/pigment/: Cargo.toml
crates/pigment-core/: Cargo.toml
crates/pigment-core/examples/: apk_tree.rs  discord_mock_cycle.rs  handler_roundtrip.rs  parse_real_logs.rs  resolve_names.rs  roundtrip_live.rs
crates/pigment-core/src/: activity.rs  config.rs  discord.rs  lib.rs  library.rs  mods.rs  paths.rs  profiles.rs  protocol.rs  roblox_api.rs  sober.rs  util.rs
crates/pigment-launch/: Cargo.toml
crates/pigment-launch/src/: main.rs
crates/pigment/src/: main.rs
crates/pigment/src/ui/: about.rs  activity.rs  fflags.rs  home.rs  mod.rs  mods.rs  profiles.rs  settings.rs
docs/: guide.html  index.html
packaging/: PKGBUILD  net.pigmentlab.Pigment.Launcher.desktop  net.pigmentlab.Pigment.desktop  net.pigmentlab.Pigment.metainfo.xml  org.pigment.Pigment.Launcher.desktop  org.pigment.Pigment.desktop  org.pigment.Pigment.metainfo.xml
packaging/flatpak/: net.pigmentlab.Pigment.yaml  org.pigment.Pigment.yaml
packaging/flatpak/flathub/: README.md  cargo-sources.json  net.pigmentlab.Pigment.yaml  org.pigment.Pigment.yaml
site/: build.py  guide.template.html  index.template.html  theme.css
