[workspace]
resolver = "2"
members = [
    "crates/pigment-core",
    "crates/pigment",
    "crates/pigment-launch",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/miku/pigment"

[workspace.dependencies]
pigment-core = { path = "crates/pigment-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonc-parser = { version = "0.33", features = ["serde"] }
thiserror = "2"
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
time = { version = "0.3", features = ["parsing", "formatting"] }
ureq = { version = "3", default-features = false, features = ["rustls"] }
